fixed spacing, added styled <hr>

--- a/src/vanilla.css
+++ b/src/vanilla.css
@@ -204,7 +204,8 @@ button:hover {
 #cat {
     height: 400px;
     object-fit: contain;
-    margin: 16px;
+    margin: 32px;
+    margin-top: 0;
 }
 
 #content {
@@ -224,4 +225,13 @@ footer ul {
 blockquote {
     margin-top: 0;
     height: 100px;
+}
+
+hr {
+    width: 100%;
+    margin: 32px;
+    padding: 0;
+    margin-bottom: 0;
+    border: 1px solid orange;
+    border-radius: 225px;
 }
